# cmakeCookbook

chapter-02/recipe-06/cxx-example/: CMakeLists.txt  linear-algebra.cpp
chapter-03/recipe-02b/c-example/: CMakeLists.txt
